Tools/WebKitTestRunner/TestController.h
@@ -364,6 +364,7 @@ public:
     void abortModal();
 
     bool isDoingMediaCapture() const;
+    bool isEnumeratingAudioUnitActive() const;
 
     String dumpPrivateClickMeasurement();
     void clearPrivateClickMeasurement();
