Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm
@@ -45,6 +45,7 @@
 #import <WebKit/WKProcessPoolPrivate.h>
 #import <WebKit/WKStringCF.h>
 #import <WebKit/WKUserContentControllerPrivate.h>
+#import <WebKit/WKUserMediaPermissionCheck.h>
 #import <WebKit/WKWebView.h>
 #import <WebKit/WKWebViewConfiguration.h>
 #import <WebKit/WKWebViewConfigurationPrivate.h>
@@ -580,7 +581,16 @@ void TestController::setAllowedMenuActions(const Vector<String>& actions)
 
 bool TestController::isDoingMediaCapture() const
 {
-    return m_mainWebView->platformView()._mediaCaptureState != _WKMediaCaptureStateDeprecatedNone;
+    return m_mainWebView->platformView().microphoneCaptureState != WKMediaCaptureStateNone || m_mainWebView->platformView().cameraCaptureState != WKMediaCaptureStateNone;
+}
+
+bool TestController::isEnumeratingAudioUnitActive() const
+{
+#if PLATFORM(IOS_FAMILY) && ENABLE(MEDIA_STREAM)
+    return WKUserMediaIsEnumeratingAudioUnitActive();
+#else
+    return m_mainWebView->platformView().microphoneCaptureState == WKMediaCaptureStateActive;
+#endif
 }
 
 #if PLATFORM(IOS_FAMILY)
